--- a/src/pages/lead/lead.html
+++ b/src/pages/lead/lead.html
@@ -1,18 +1,24 @@
-<!--
-  Generated template for the LeadPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+<!-- <ion-header>
 
   <ion-navbar>
     <ion-title>Lead</ion-title>
   </ion-navbar>
 
-</ion-header>
+</ion-header> -->
 
 
-<ion-content padding>
 
-</ion-content>
+<ion-header>
+    <ion-navbar>
+      <ion-title>Navigation</ion-title>
+    </ion-navbar>
+  </ion-header>
+  
+  <ion-content>
+    <ion-list>
+      <button ion-item *ngFor="let item of items" (click)="openNavDetailsPage(item)" icon-start>
+        <ion-icon [name]="'logo-' + item.icon" [ngStyle]="{'color': item.color}" item-start></ion-icon>
+        {{ item.title }}
+      </button>
+    </ion-list>
+  </ion-content>
