--- a/src/pages/estimate/estimate.html
+++ b/src/pages/estimate/estimate.html
@@ -113,7 +113,7 @@
         <!-- </ion-col>
           <ion-col col-6> -->
         <!-- <ion-item> -->
-        <ion-input [(ngModel)]="estimate.distanceKM" name="distanceKM" type="text" placeholder="Enter the distance in KM" required></ion-input>
+        <ion-input [(ngModel)]="estimate.distanceKM" name="distanceKM" type="number" maxlength="3" placeholder="Enter the distance in KM" required></ion-input>
       </ion-item>
       <!-- </ion-col> -->
       <!-- </ion-row> -->
@@ -186,7 +186,7 @@
         </ion-col>
         <ion-col col-6>
           <ion-item> -->
-        <ion-input [(ngModel)]="estimate.unitsTotal" name="unitsTotal" type="text" (change)="onChangeTotalUnits(estimate.unitsTotal)"
+        <ion-input [(ngModel)]="estimate.unitsTotal" name="unitsTotal" type="number" maxlength="4" (change)="onChangeTotalUnits(estimate.unitsTotal)"
           placeholder="Enter the Total Units/Qty" required></ion-input>
       </ion-item>
       <!-- </ion-col> -->
@@ -214,7 +214,7 @@
           </ion-col>
           <ion-col col-6>
             <ion-item>
-              <ion-input [(ngModel)]="estimate.unit1" name="unit1" (ionChange)="onChangeUnit1(estimate.unit1)" type="text"></ion-input>
+              <ion-input [(ngModel)]="estimate.unit1" name="unit1" (ionChange)="onChangeUnit1(estimate.unit1)" type="number" maxlength="4"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -226,7 +226,7 @@
           </ion-col>
           <ion-col col-6>
             <ion-item>
-              <ion-input [(ngModel)]="estimate.unit2" name="unit2" (ionChange)="onChangeUnit2(estimate.unit2)" type="text"></ion-input>
+              <ion-input [(ngModel)]="estimate.unit2" name="unit2" (ionChange)="onChangeUnit2(estimate.unit2)" type="number" maxlength="4"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -238,7 +238,7 @@
           </ion-col>
           <ion-col col-6>
             <ion-item>
-              <ion-input [(ngModel)]="estimate.unit4" name="unit4" (ionChange)="onChangeUnit4(estimate.unit4)" type="text"></ion-input>
+              <ion-input [(ngModel)]="estimate.unit4" name="unit4" (ionChange)="onChangeUnit4(estimate.unit4)" type="number" maxlength="4"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -250,7 +250,7 @@
           </ion-col>
           <ion-col col-6>
             <ion-item>
-              <ion-input [(ngModel)]="estimate.unit6" name="unit6" (ionChange)="onChangeUnit6(estimate.unit6)" type="text"></ion-input>
+              <ion-input [(ngModel)]="estimate.unit6" name="unit6" (ionChange)="onChangeUnit6(estimate.unit6)" type="number" maxlength="4"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -404,7 +404,7 @@
       Submit
     </button>
   </form>
-  <button ion-button block color="danger" (click)="clearAllData()">
+  <button ion-button block color="danger" (click)="clearAllData(estimateForm)">
     Clear All
   </button>
 </ion-content>
