--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,10 +15,10 @@
   <ion-toolbar no-border-top [color]="isAndroid ? 'royal' : 'masters'">
     <ion-segment [(ngModel)]="category" [color]="'head'">
       <ion-segment-button value="production">
-        Production
+        Sales
       </ion-segment-button>
       <ion-segment-button value="sales">
-        Sales
+        Target
       </ion-segment-button>
       <ion-segment-button value="statistics">
         Message
