--- a/src/pages/lead/lead.html
+++ b/src/pages/lead/lead.html
@@ -1,24 +1,17 @@
-<!-- <ion-header>
-
-  <ion-navbar>
-    <ion-title>Lead</ion-title>
-  </ion-navbar>
-
-</ion-header> -->
-
-
-
 <ion-header>
-  <ion-navbar>
-    <ion-title>Navigation</ion-title>
+  <ion-navbar [color]="'head'">
+    <ion-buttons left>
+      <button ion-button icon-only menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title center>Lead</ion-title>
+    <ion-buttons right>
+      <img alt="logo" height="40" src="assets/imgs/srk-0.png">
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
-  <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="openNavDetailsPage(item)" icon-start>
-      <ion-icon [name]="'logo-' + item.icon" [ngStyle]="{'color': item.color}" item-start></ion-icon>
-      {{ item.title }}
-    </button>
-  </ion-list>
+<ion-content padding>
+
 </ion-content>
