--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -23,7 +23,7 @@
       <h3>Qty # {{displayIndianNumber(item.total_ORDER_UNIT)}}</h3>
       <p>Total Cost # {{ displayINR(item.total_COST) }}</p>
       <p>Order # {{ item.order_GROUP_NO }} </p>
-      <p>Date # {{item.order_DT}}</p>
+      <p>Date {{item.order_DT}}</p>
     </button>
   </ion-list>
 </ion-content>
