--- a/src/pages/orders/navigation-details.html
+++ b/src/pages/orders/navigation-details.html
@@ -12,72 +12,73 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
     <ion-card>
         <ion-card-header>
-            Order # {{ order.order_GROUP_NO }}
+            <b>
+                {{ order.customer_NAME}}
+            </b>
         </ion-card-header>
-        <ion-row>
-            <ion-col col-5>
-                <ion-item>
-                    <ion-label stacked>Customer Name</ion-label>
-                    <ion-label stacked>Site</ion-label>
-                    <ion-label stacked>Referer 1</ion-label>
-                    <ion-label stacked>Referer 2</ion-label>
-                    <ion-label stacked>Distance</ion-label>
-                    <ion-label stacked>Taxable</ion-label>
-                </ion-item>
-            </ion-col>
-            <ion-col col-7>
-                <ion-label>{{order.customer_NAME}}</ion-label>
-                <ion-label>{{order.site_NAME}}</ion-label>
-                <ion-label>{{order.refrerel1_NAME}}</ion-label>
-                <ion-label>{{order.refrerel2_NAME}}</ion-label>
-                <ion-label>{{order.delivery_DISTANCE}}</ion-label>
-                <ion-label>{{order.taxable_STATUS}}</ion-label>
-            </ion-col>
-        </ion-row>
+        <ion-item stacked>
+            <ion-label>Order #</ion-label>
+            <ion-label>{{order.order_GROUP_NO }}</ion-label>
+        </ion-item>
+        <ion-item stacked>
+            <ion-label>Site</ion-label>
+            <ion-label>{{order.site_NAME}}</ion-label>
+        </ion-item>
+        <ion-item stacked>
+            <ion-label>Distance</ion-label>
+            <ion-label>{{order.delivery_DISTANCE}} Kms</ion-label>
+        </ion-item>
+        <ion-item stacked>
+            <ion-label>Taxable</ion-label>
+            <ion-label>{{order.taxable_STATUS}}</ion-label>
+        </ion-item>
+        <ion-item stacked>
+            <ion-label>Reference 1</ion-label>
+            <ion-label>{{order.refrerel1_NAME}}</ion-label>
+        </ion-item>
+        <ion-item stacked>
+            <ion-label>Reference 2</ion-label>
+            <ion-label>{{order.refrerel2_NAME}}</ion-label>
+        </ion-item>
+
     </ion-card>
     <ion-card>
-        <ion-card-header>
-            Product Details
-        </ion-card-header>
-        <ion-row>
-            <ion-col col-5>
-                <ion-item>
-                    <ion-label stacked>Product Group</ion-label>
-                    <ion-label stacked>Product</ion-label>
-                    <ion-label stacked>Total Units</ion-label>
-                </ion-item>
-            </ion-col>
-            <ion-col col-7>
-                <ion-label>{{order.product_GROUP}}</ion-label>
-                <ion-label>{{order.product_NAME}}</ion-label>
-                <ion-label>{{displayIndianNumber(order.total_ORDER_UNIT)}}</ion-label>
-            </ion-col>
-        </ion-row>
+        <ion-item stacked>
+            <ion-label>Product Group</ion-label>
+            <ion-label>{{order.product_GROUP}}</ion-label>
+        </ion-item>
+        <ion-item stacked>
+            <ion-label>Product</ion-label>
+            <ion-label>{{order.product_NAME}}</ion-label>
+        </ion-item>
+        <ion-item stacked>
+            <ion-label>Total Units</ion-label>
+            <ion-label>{{displayIndianNumber(order.total_ORDER_UNIT)}}</ion-label>
+        </ion-item>
     </ion-card>
     <ion-card>
-        <ion-card-header>
-            Cost Details
-        </ion-card-header>
-        <ion-row>
-            <ion-col col-5>
-                <ion-item>
-                    <ion-label stacked>Product Cost</ion-label>
-                    <ion-label stacked>Tax 1</ion-label>
-                    <ion-label stacked>Tax 2</ion-label>
-                    <ion-label stacked>Loading Cost</ion-label>
-                    <ion-label stacked>Transport Cost</ion-label>
-                </ion-item>
-            </ion-col>
-            <ion-col col-7>
-                <ion-label>{{displayINR(order.total_PRODUCT_COST)}}</ion-label>
-                <ion-label>{{displayINR(order.total_TAX1)}}</ion-label>
-                <ion-label>{{displayINR(order.total_TAX1)}}</ion-label>
-                <ion-label>{{displayINR(order.total_LOADING_COST)}}</ion-label>
-                <ion-label>{{displayINR(order.total_TRANSPORT_COST)}}</ion-label>
-            </ion-col>
-        </ion-row>
+        <ion-item stacked>
+            <ion-label>Product Cost</ion-label>
+            <ion-label>{{displayINR(order.total_PRODUCT_COST)}}</ion-label>
+        </ion-item>
+        <ion-item stacked>
+            <ion-label>Tax 1</ion-label>
+            <ion-label>{{displayINR(order.total_TAX1)}}</ion-label>
+        </ion-item>
+        <ion-item stacked>
+            <ion-label>Tax 2</ion-label>
+            <ion-label>{{displayINR(order.total_TAX1)}}</ion-label>
+        </ion-item>
+        <ion-item stacked>
+            <ion-label>Loading Cost</ion-label>
+            <ion-label>{{displayINR(order.total_LOADING_COST)}}</ion-label>
+        </ion-item>
+        <ion-item stacked>
+            <ion-label>Transport Cost</ion-label>
+            <ion-label>{{displayINR(order.total_TRANSPORT_COST)}}</ion-label>
+        </ion-item>
     </ion-card>
 </ion-content>
