--- a/src/pages/estimate/estimate.html
+++ b/src/pages/estimate/estimate.html
@@ -16,11 +16,11 @@
 <ion-content padding>
   <form (submit)="estimateOrder(estimateForm)" #estimateForm="ngForm">
     <!-- <form (ngSubmit)="submitOrder(ordersForm)" #ordersForm="ngForm"> -->
-    <ion-card>
-      <!-- <ion-card-header>
+    <!-- <ion-card> -->
+    <!-- <ion-card-header>
         <ion-card-title>Customer</ion-card-title>
       </ion-card-header> -->
-      <!-- <ion-row>
+    <!-- <ion-row>
         <ion-col>
           <ion-item>
             <ion-label>Name</ion-label>
@@ -35,170 +35,159 @@
           </ion-item>
         </ion-col>
       </ion-row> -->
-      <ion-item>
-        <ion-label stacked>Customer Name</ion-label>
-        <ion-select [(ngModel)]="estimate.customerID" name="customerID" [compareWith]="">
-          <ion-option *ngFor="let customer of customers" [value]="customer.cust_ID" (ionSelect)="onSelectCustomer(customer.cust_ID,customer.cust_NAME)"
-            required>{{customer.cust_NAME}} ({{customer.cust_PHONE1}})</ion-option>
-          <!-- <ion-option *ngFor="let customer of customers" [value]="customer.cust_ID" (ionSelect)="onSelectCustomer(customer.cust_ID)"
+    <ion-item-divider color="selva">
+      Customer Details
+    </ion-item-divider>
+    <ion-item>
+      <ion-label color="selva" floating>Customer Name</ion-label>
+      <ion-select [(ngModel)]="estimate.customerID" name="customerID" [compareWith]="">
+        <ion-option *ngFor="let customer of customers" [value]="customer.cust_ID" (ionSelect)="onSelectCustomer(customer.cust_ID,customer.cust_NAME)"
+          required>{{customer.cust_NAME}} ({{customer.cust_PHONE1}})</ion-option>
+        <!-- <ion-option *ngFor="let customer of customers" [value]="customer.cust_ID" (ionSelect)="onSelectCustomer(customer.cust_ID)"
             required>{{customer.cust_NAME}} ({{customer.cust_PHONE1}})</ion-option> -->
-        </ion-select>
-      </ion-item>
-      <!-- <ion-item>
+      </ion-select>
+    </ion-item>
+    <!-- <ion-item>
             <ion-label>Customer</ion-label>
             <ion-select [(ngModel)]="customer" name="customer" >
               <ion-option *ngFor="let customer of customers" [value]="customer" (change)="onChange(customer)"  text-left >{{customer.cust_NAME}}</ion-option>
             </ion-select>
           </ion-item> -->
 
-      <!-- <ion-row>
+    <!-- <ion-row>
         <ion-col col-4> -->
-      <ion-item>
-        <ion-label stacked>Site</ion-label>
-        <!-- </ion-item>
+    <ion-item>
+      <ion-label color="selva" floating>Site</ion-label>
+      <!-- </ion-item>
         </ion-col>
         <ion-col col-8>
           <ion-item> -->
-        <ion-select [(ngModel)]="estimate.siteID" name="siteID">
-          <ion-option *ngFor="let site of sites" [value]="site.site_ID" (ionSelect)="onSelectSite(site.site_NAME)" required>{{site.site_NAME}}</ion-option>
-        </ion-select>
-        <!-- <ion-label>{{customer.site_NAME}}</ion-label> -->
-        <!-- <ion-input [(ngModel)]="customer.site_NAME" name="site_NAME" type="text" [disabled]="true" ></ion-input> -->
-      </ion-item>
-      <!-- </ion-col>
+      <ion-select [(ngModel)]="estimate.siteID" name="siteID">
+        <ion-option *ngFor="let site of sites" [value]="site.site_ID" (ionSelect)="onSelectSite(site.site_NAME)" required>{{site.site_NAME}}</ion-option>
+      </ion-select>
+      <!-- <ion-label>{{customer.site_NAME}}</ion-label> -->
+      <!-- <ion-input [(ngModel)]="customer.site_NAME" name="site_NAME" type="text" [disabled]="true" ></ion-input> -->
+    </ion-item>
+    <!-- </ion-col>
       </ion-row> -->
 
 
-      <!-- <ion-row>
+    <!-- <ion-row>
         <ion-col col-4> -->
-      <ion-item>
-        <ion-label stacked>Referer 1</ion-label>
-        <!-- </ion-item>
+    <ion-item>
+      <ion-label color="selva" floating>Referer 1</ion-label>
+      <!-- </ion-item>
         </ion-col>
         <ion-col col-8>
           <ion-item> -->
-        <!-- <ion-label>{{customer.reference_ID}}</ion-label> -->
-        <!-- <ion-input [(ngModel)]="customer.reference_ID" name="reference_ID" type="text" [disabled]="true" ></ion-input> -->
-        <ion-select [(ngModel)]="estimate.reference1" name="reference1">
-          <ion-option *ngFor="let reference1 of references" [value]="reference1.reference_ID" (ionSelect)="onSelectReference(reference1.refrer_NAME)">
-            {{reference1.refrer_NAME}} ({{reference1.referer_MOBILE1}}) - {{reference1.referer_TYPE}}
-          </ion-option>
-        </ion-select>
-      </ion-item>
-      <!-- </ion-col>
+      <!-- <ion-label>{{customer.reference_ID}}</ion-label> -->
+      <!-- <ion-input [(ngModel)]="customer.reference_ID" name="reference_ID" type="text" [disabled]="true" ></ion-input> -->
+      <ion-select [(ngModel)]="estimate.reference1" name="reference1">
+        <ion-option *ngFor="let reference1 of references" [value]="reference1.reference_ID" (ionSelect)="onSelectReference1(reference1.refrer_NAME)">
+          {{reference1.refrer_NAME}} ({{reference1.referer_MOBILE1}}) - {{reference1.referer_TYPE}}
+        </ion-option>
+      </ion-select>
+    </ion-item>
+    <!-- </ion-col>
       </ion-row> -->
 
 
-      <!-- <ion-row>
+    <!-- <ion-row>
         <ion-col col-4> -->
-      <ion-item>
-        <ion-label stacked>Referer 2</ion-label>
-        <!-- </ion-item>
+    <ion-item>
+      <ion-label color="selva" floating>Referer 2</ion-label>
+      <!-- </ion-item>
         </ion-col>
         <ion-col col-8>
           <ion-item> -->
-        <!-- <ion-label>{{customer.reference_ID}}</ion-label> -->
-        <!-- <ion-input [(ngModel)]="customer.reference_ID" name="reference_ID" type="text" [disabled]="true" ></ion-input> -->
-        <ion-select [(ngModel)]="estimate.reference2" name="reference2">
-          <ion-option *ngFor="let reference2 of references" [value]="reference2.reference_ID" (ionSelect)="onSelectReference(reference2.refrer_NAME)">
-            {{reference2.refrer_NAME}} ({{reference2.referer_MOBILE1}}) - {{reference2.referer_TYPE}}
-          </ion-option>
-        </ion-select>
-      </ion-item>
-      <!-- </ion-col>
+      <!-- <ion-label>{{customer.reference_ID}}</ion-label> -->
+      <!-- <ion-input [(ngModel)]="customer.reference_ID" name="reference_ID" type="text" [disabled]="true" ></ion-input> -->
+      <ion-select [(ngModel)]="estimate.reference2" name="reference2">
+        <ion-option *ngFor="let reference2 of references" [value]="reference2.reference_ID" (ionSelect)="onSelectReference2(reference2.refrer_NAME)">
+          {{reference2.refrer_NAME}} ({{reference2.referer_MOBILE1}}) - {{reference2.referer_TYPE}}
+        </ion-option>
+      </ion-select>
+    </ion-item>
+    <!-- </ion-col>
       </ion-row> -->
-      <!-- <ion-row> -->
-      <!-- <ion-col col-6> -->
-      <ion-item>
-        <ion-label stacked>Distance</ion-label>
-        <!-- </ion-item> -->
-        <!-- </ion-col>
-          <ion-col col-6> -->
-        <!-- <ion-item> -->
-        <ion-input [(ngModel)]="estimate.distanceKM" name="distanceKM" type="number" maxlength="3" placeholder="Enter the distance in KM"
-          required></ion-input>
-      </ion-item>
+    <!-- <ion-row> -->
+    <!-- <ion-col col-6> -->
+
+    <!-- </ion-col> -->
+    <!-- </ion-row> -->
+
+    <!-- </ion-card>
+
+    <ion-card> -->
+    <!-- <ion-row> -->
+    <!-- <ion-col col-4> -->
+    <ion-item-divider color="selva">
+      Order Details
+    </ion-item-divider>
+    <ion-item>
+      <ion-label color="selva" floating>Item Group</ion-label>
+      <!-- </ion-item> -->
       <!-- </ion-col> -->
-      <!-- </ion-row> -->
-      <ion-row>
-        <ion-col col-4>
-          <ion-item>
-            <ion-label stacked>Taxable</ion-label>
-          </ion-item>
-        </ion-col>
-        <ion-col col-8>
-          <ion-item>
-            <ion-label *ngIf="isToggledTax">Yes</ion-label>
-            <ion-label *ngIf="!isToggledTax">No</ion-label>
-            <ion-toggle (ionChange)="notifyTaxOption(estimate.taxable)" [checked]="isToggledTax" required></ion-toggle>
-          </ion-item>
-        </ion-col>
-      </ion-row>
+      <!-- <ion-col col-8> -->
+      <!-- <ion-item> -->
+      <ion-select [(ngModel)]="estimate.productGroupName" name="item_Group_NAME">
+        <ion-option *ngFor="let row of productGroupModel" (ionSelect)="onItemGroupChange(row,row.product_GROUP_ID,row.division_ID)"
+          required>{{row.product_GROUP_NAME}}</ion-option>
+      </ion-select>
+    </ion-item>
+    <!-- </ion-col> -->
+    <!-- </ion-row> -->
 
-    </ion-card>
-
-    <ion-card>
-      <!-- <ion-row> -->
-      <!-- <ion-col col-4> -->
-      <ion-item>
-        <ion-label stacked>Item Group</ion-label>
-        <!-- </ion-item> -->
-        <!-- </ion-col> -->
-        <!-- <ion-col col-8> -->
-        <!-- <ion-item> -->
-        <ion-select [(ngModel)]="estimate.productGroupName" name="item_Group_NAME">
-          <ion-option *ngFor="let row of productGroupModel" (ionSelect)="onItemGroupChange(row,row.product_GROUP_ID,row.division_ID)"
-            required>{{row.product_GROUP_NAME}}</ion-option>
-
-        </ion-select>
-      </ion-item>
+    <!-- <ion-row> -->
+    <!-- <ion-col col-4> -->
+    <ion-item>
+      <ion-label color="selva" floating>Item name</ion-label>
+      <!-- </ion-item> -->
       <!-- </ion-col> -->
-      <!-- </ion-row> -->
-
-      <!-- <ion-row> -->
-      <!-- <ion-col col-4> -->
-      <ion-item>
-        <ion-label stacked>Item name</ion-label>
-        <!-- </ion-item> -->
-        <!-- </ion-col> -->
-        <!-- <ion-col col-8>
+      <!-- <ion-col col-8>
             <ion-item> -->
-        <!-- <ion-select name="product"> -->
-        <ion-select [(ngModel)]="estimate.product" name="product">
-          <ion-option *ngFor="let item of products" [value]="item" (ionSelect)="onItemNameChange(item.productDetails)" required>{{item.product_NAME}}</ion-option>
-        </ion-select>
-      </ion-item>
+      <!-- <ion-select name="product"> -->
+      <ion-select [(ngModel)]="estimate.product" name="product">
+        <ion-option *ngFor="let item of products" [value]="item" (ionSelect)="onItemNameChange(item.productDetails,item.uom)" required>{{item.product_NAME}}</ion-option>
+      </ion-select>
+    </ion-item>
 
-      <ion-item>
-        <!-- <ion-col> -->
-        <ion-label>Cost per Unit:</ion-label>
-        <ion-label>{{estimate['product'].product_COST}}</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>Loading Cost:</ion-label>
-        <ion-label>{{estimate['product'].loading_COST}}</ion-label>
-        <!-- </ion-col> -->
-      </ion-item>
-      <!-- </ion-col> -->
-      <!-- </ion-row> -->
-      <!-- <ion-row> -->
-      <!-- <ion-col col-6> -->
-      <ion-item>
-        <ion-label>Total Units</ion-label>
-        <!-- <ion-label>Total {{uom}}</ion-label> -->
-        <!-- </ion-item>
+    <ion-item>
+      <ion-label color="selva" fixed>Distance</ion-label>
+      <!-- </ion-item> -->
+      <!-- </ion-col>
+            <ion-col col-6> -->
+      <!-- <ion-item> -->
+      <ion-input [(ngModel)]="estimate.distanceKM" name="distanceKM" type="number" maxlength="3" placeholder="Enter the distance in KM"
+        required></ion-input>
+      <!-- [readonly]="distanceReadOnly" required></ion-input> -->
+    </ion-item>
+    <!-- </ion-col> -->
+    <!-- </ion-row> -->
+    <!-- <ion-row> -->
+    <!-- <ion-col col-6> -->
+    <ion-item>
+      <!-- <ion-label color="selva" fixed>Total Units</ion-label> -->
+      <ion-label color="selva" fixed>Total {{uom}}</ion-label>
+      <!-- </ion-item>
         </ion-col>
         <ion-col col-6>
           <ion-item> -->
-        <ion-input [(ngModel)]="estimate.unitsTotal" name="unitsTotal" type="number" maxlength="4" (change)="onChangeTotalUnits(estimate.unitsTotal)"
-          placeholder="Enter the Total Units/Qty" required></ion-input>
-      </ion-item>
-      <!-- </ion-col> -->
-      <!-- </ion-row> -->
-    </ion-card>
+      <ion-input [(ngModel)]="estimate.unitsTotal" name="unitsTotal" type="number" maxlength="4" (change)="onChangeTotalUnits(estimate.unitsTotal)"
+        placeholder="Enter the Total Units/Qty" required></ion-input>
+    </ion-item>
+    <!-- </ion-col> -->
+    <!-- </ion-row> -->
+    <!-- </ion-card>
 
 
-    <ion-card>
+    <ion-card> -->
+    <!-- <ion-card padding> -->
+
+    <ion-list>
+      <ion-item-divider color="selva" *ngIf="itemGroup=='QUARRY' || itemGroup=='DESIGNER_TILES' || itemGroup=='PAVER' || itemGroup=='HOLLOW_BLOCK'">
+        Product Details
+      </ion-item-divider>
       <div *ngIf="itemGroup=='QUARRY'">
         <!-- <div *ngIf="itemGroup=='Aggregate'"> -->
         <ion-row>
@@ -213,7 +202,7 @@
         <ion-row>
           <ion-col col-6>
             <ion-item>
-              <ion-label>1 Unit</ion-label>
+              <ion-label color="selva">1 Unit</ion-label>
             </ion-item>
           </ion-col>
           <ion-col col-6>
@@ -225,7 +214,7 @@
         <ion-row>
           <ion-col col-6>
             <ion-item>
-              <ion-label>2 Units</ion-label>
+              <ion-label color="selva">2 Units</ion-label>
             </ion-item>
           </ion-col>
           <ion-col col-6>
@@ -237,7 +226,7 @@
         <ion-row>
           <ion-col col-6>
             <ion-item>
-              <ion-label>4 Units</ion-label>
+              <ion-label color="selva">4 Units</ion-label>
             </ion-item>
           </ion-col>
           <ion-col col-6>
@@ -249,7 +238,7 @@
         <ion-row>
           <ion-col col-6>
             <ion-item>
-              <ion-label>6 Units</ion-label>
+              <ion-label color="selva">6 Units</ion-label>
             </ion-item>
           </ion-col>
           <ion-col col-6>
@@ -259,8 +248,8 @@
           </ion-col>
         </ion-row>
       </div>
-    </ion-card>
-    <ion-card>
+      <!-- </ion-card>
+    <ion-card> -->
       <div *ngIf="itemGroup=='DESIGNER_TILES'">
         <!-- <ion-card>
           <ion-row>
@@ -301,32 +290,32 @@
           </div>
         </ion-card> -->
 
-        <ion-card>
-          <div *ngFor="let item of selectedProduct">
-            <ion-row>
-              <ion-col col-6>
-                <ion-item>
-                  <ion-label> {{item.product_DETAIL_NAME}}</ion-label>
-                </ion-item>
-              </ion-col>
-              <ion-col col-6>
-                <ion-item>
-                  <ion-input [(ngModel)]="item.qty" name={{item}} type="number" text-right></ion-input>
-                </ion-item>
-              </ion-col>
-            </ion-row>
-          </div>
-        </ion-card>
+        <!-- <ion-card> -->
+        <div *ngFor="let item of selectedProduct">
+          <ion-row>
+            <ion-col col-9>
+              <ion-item text-wrap>
+                <ion-label> {{item.product_DETAIL_NAME}}</ion-label>
+              </ion-item>
+            </ion-col>
+            <ion-col col-3>
+              <ion-item>
+                <ion-input [(ngModel)]="item.qty" name={{item}} type="number" text-right></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </div>
+        <!-- </ion-card> -->
       </div>
       <div *ngIf="itemGroup=='PAVER'">
         <div *ngFor="let item of selectedProduct">
           <ion-row>
-            <ion-col col-6>
-              <ion-item>
+            <ion-col col-9>
+              <ion-item text-wrap>
                 <ion-label> {{item.product_DETAIL_NAME}}</ion-label>
               </ion-item>
             </ion-col>
-            <ion-col col-6>
+            <ion-col col-3>
               <ion-item>
                 <ion-input [(ngModel)]="item.qty" name={{item}} type="number" text-right></ion-input>
               </ion-item>
@@ -377,38 +366,72 @@
           </ion-row>
         </div>
       </div>
-    </ion-card>
-    <ion-card>
+    </ion-list>
+    <!-- </ion-card> -->
+    <!-- </ion-card>
+    <ion-card> -->
+    <!-- <ion-card padding> -->
+
+    <ion-list *ngIf="showCostSummary">
+      <ion-item-divider color="selva">
+        Cost Summary
+      </ion-item-divider>
       <ion-row>
-        <ion-col>
+        <ion-col col-4>
           <ion-item>
-            <ion-label>Product Cost: </ion-label>
-            <ion-label>{{displayINR(estimate.totalProductCost)}}</ion-label>
+            <ion-label color="selva">Taxable</ion-label>
           </ion-item>
-          <ion-item *ngIf="isToggledTax">
-            <ion-label>Tax: </ion-label>
-            <ion-label>{{displayINR(estimate.totalTax)}}</ion-label>
-          </ion-item>
-          <ion-item *ngIf="showTransportCost">
-            <ion-label>Transport Cost: </ion-label>
-            <ion-label>{{displayINR(estimate.totalTransportCost)}}</ion-label>
-          </ion-item>
-          <ion-item *ngIf="showLoadingCost">
-            <ion-label>Loading Cost: </ion-label>
-            <ion-label>{{displayINR(estimate.totalLoadingCost)}}</ion-label>
-          </ion-item>
+        </ion-col>
+        <ion-col col-8>
           <ion-item>
-            <ion-label>Total Cost : </ion-label>
-            <ion-label>{{displayINR(estimate.totalCost)}}</ion-label>
+            <ion-label *ngIf="isToggledTax">Yes</ion-label>
+            <ion-label *ngIf="!isToggledTax">No</ion-label>
+            <ion-toggle (ionChange)="notifyTaxOption(estimate.taxable)" [checked]="isToggledTax" required></ion-toggle>
+            <!-- <ion-checkbox (ionChange)="notifyTaxOption(estimate.taxable)" [checked]="isToggledTax" required></ion-checkbox> -->
           </ion-item>
         </ion-col>
       </ion-row>
-    </ion-card>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label color="selva">Total Cost : </ion-label>
+            <ion-label>{{displayINR(estimate.totalCost)}}</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label color="selva">Product Cost: </ion-label>
+            <ion-label>{{displayINR(estimate.totalProductCost)}}</ion-label>
+          </ion-item>
+          <ion-item *ngIf="isToggledTax">
+            <ion-label color="selva">Tax: </ion-label>
+            <ion-label>{{displayINR(estimate.totalTax)}}</ion-label>
+          </ion-item>
+          <ion-item *ngIf="showTransportCost">
+            <ion-label color="selva">Transport Cost: </ion-label>
+            <ion-label>{{displayINR(estimate.totalTransportCost)}}</ion-label>
+          </ion-item>
+          <ion-item *ngIf="showLoadingCost">
+            <ion-label color="selva">Loading Cost: </ion-label>
+            <ion-label>{{displayINR(estimate.totalLoadingCost)}}</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label color="selva">Cost per Unit:</ion-label>
+            <ion-label>{{displayINR(productPricePerUnit)}}</ion-label>
+            <!-- <ion-label>{{displayINR(estimate['product'].product_COST)}}</ion-label> -->
+          </ion-item>
+          <ion-item>
+            <ion-label color="selva">Loading per Unit:</ion-label>
+            <ion-label>{{displayINR(loadingCostPerUnit)}}</ion-label>
+            <!-- <ion-label>{{displayINR(estimate['product'].loading_COST)}}</ion-label> -->
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-list>
+    <!-- </ion-card> -->
     <button ion-button block type="submit" [color]="'head'" [disabled]="!estimateForm.valid">
       Submit
     </button>
   </form>
-  <button ion-button block color="danger" (click)="clearAllData(estimateForm)">
+  <button ion-button block color="yellow" (click)="clearAllData(estimateForm)">
     Clear All
   </button>
 </ion-content>
