--- a/src/pages/orders/navigation-details.html
+++ b/src/pages/orders/navigation-details.html
@@ -54,7 +54,7 @@
             <ion-label>Product</ion-label>
             <ion-label>{{order.product_NAME}}</ion-label>
         </ion-item>
-        <ion-item stacked text-wrap>
+        <ion-item stacked>
             <ion-label>Cost per Unit</ion-label>
             <ion-label>{{order.product_UNIT_COST}}</ion-label>
         </ion-item>
